--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ yfinance
 torch==2.1.0+cpu
 -f https://download.pytorch.org/whl/torch_stable.html
 plotly
-scikit-learn
+scikit-learn==1.6.1
 nbformat
 streamlit
 ipykernel
