--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,4 +14,15 @@ dependencies = [
     "scikit-learn==1.6.1",
     "streamlit>=1.48.1",
     "yfinance>=0.2.65",
+    "torch==2.1.0+cpu",
 ]
+
+[tool.uv.sources]
+torch = [
+    { index = "pytorch-cpu" },
+]
+
+[[tool.uv.index]]
+name = "pytorch-cpu"
+url = "https://download.pytorch.org/whl/cpu"
+explicit = true
